- add to ts config

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -5,8 +5,13 @@
     "target": "ES2018",
     "strict": true,
     "incremental": true,
-    "module": "ES2015",
     "tsBuildInfoFile": "./tsbuildinfo",
+    "module": "ES2015",
+    "noImplicitAny": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "strictNullChecks": true,
+    "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "sourceMap": true,
