--- a/packages/front-end/tsconfig.json
+++ b/packages/front-end/tsconfig.json
@@ -6,6 +6,12 @@
     "rootDir": "src",
     "incremental": true,
     "module": "ES2015",
+    "noImplicitAny": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "noFallthroughCasesInSwitch": true,
+    "strictNullChecks": true,
+    "allowJs": false,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "sourceMap": true,
