- add tslint config - add tslint webpack loader

--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "root",
+  "name": "gitsensei",
   "private": true,
   "devDependencies": {
     "lerna": "^3.19.0",
+    "tslint": "^5.20.1",
     "typescript": "^3.7.4"
   },
   "scripts": {
     "lerna:bootstrap": "lerna bootstrap"
-  },
-  "dependencies": {
-    "@types/node": "^13.1.1",
-    "dev": "^0.1.3"
   }
 }
