--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -17,6 +17,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.1",
+    "tslint-loader": "^3.5.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
