--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -25,7 +25,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "scripts": {
-    "dev": "webpack-dev-server",
-    "build": "webpack -p"
+    "dev": "webpack-dev-server --env.developent --progress",
+    "build": "webpack -p --env.production"
   }
 }
