--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -22,7 +22,8 @@
     "tslint-loader": "^3.5.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "scripts": {
     "dev": "webpack-dev-server --env.developent --progress",
